Website (temp) Upload 2

--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <br><br>
+            <br><br> 
             <span class="lunchStyling">Lunch</span><span class="mateStyling">mate</span>
             <h3>Good food. Better community.</h3>
             <br>
+            <a href="mailto:hello@lunchmate.co" class="btn btn-lg btn-light">Contact Us</a>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
         </div>
     </header>
@@ -90,59 +91,55 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Our Services</h2>
+                    <h2>How We Help</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                                <i class="fa fa-street-view fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>More Time Eating, <br> Less Time Walking</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p>Our restaurants our always a short walk away. Our guarantee.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+                                <i class="fa fa-line-chart fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Boost Your Numbers <br> Across The Board</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p>Boost employee productivity, morale, and company loyalty, all with one easy step.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
+                                <i class="fa fa-bolt fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Immediate Integration Into Corporate Culture </strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p>Employees already go out to lunch. We make it cheaper.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                                <i class="fa fa-child fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Be The Reason Your Employees Smile</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p>Whether it's from great food or 15 extra minutes with their kids in the morning. <br> <br> A happy employee creates a happy company.</p>
                             </div>
                         </div>
                     </div>
@@ -160,23 +157,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center" style="color:#F8F8F8;">
-                    <h3>We are proud to serve London, ON.</h3>
+                    <h3>We proudly serve London, ON.</h3>
                 </div>
             </div>
         </div>
-    </aside>
-
-    <!-- Map -->
-    <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7675.438551534799!2d-81.24897744772248!3d42.98788491303979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sca!4v1484963584188"></iframe>
-
-        <br />
-        <small>
-            <a href="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7675.438551534799!2d-81.24897744772248!3d42.98788491303979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sca!4v1484963584188"></a>
-        </small>
-    </section>
-
-   
+    </aside>  
 
 
 
