Website (temp) Upload 3

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             </span>
                                 <h4>
                                     <strong>More Time Eating, <br> Less Time Walking</strong>
-                                </h4>
+                                </h4> 
                                 <p>Our restaurants our always a short walk away. Our guarantee.</p>
                             </div>
                         </div>
@@ -114,7 +114,7 @@
                             </span>
                                 <h4>
                                     <strong>Boost Your Numbers <br> Across The Board</strong>
-                                </h4>
+                                </h4>  
                                 <p>Boost employee productivity, morale, and company loyalty, all with one easy step.</p>
                             </div>
                         </div>
@@ -126,7 +126,7 @@
                             </span>
                                 <h4>
                                     <strong>Immediate Integration Into Corporate Culture </strong>
-                                </h4>
+                                </h4> 
                                 <p>Employees already go out to lunch. We make it cheaper.</p>
                             </div>
                         </div>
@@ -138,8 +138,8 @@
                             </span>
                                 <h4>
                                     <strong>Be The Reason Your Employees Smile</strong>
-                                </h4>
-                                <p>Whether it's from great food or 15 extra minutes with their kids in the morning. <br> <br> A happy employee creates a happy company.</p>
+                                </h4> 
+                                <p>Whether it's from great food or 15 extra minutes with their kids in the morning.</p>
                             </div>
                         </div>
                     </div>
